<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtCarApp"
        android:textAlignment="center"
        android:textSize="50sp"
        android:layout_marginBottom="20dp"/>

    <ImageView
        android:contentDescription="@string/imgCarApp"
        android:id="@+id/imgMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:src="@drawable/bmw_m_car_app"
        android:layout_marginBottom="50dp"
        android:adjustViewBounds="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddCar"
        android:layout_below="@id/imgMain"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:textSize="30sp"
        android:layout_marginBottom="30dp"
        android:text="@string/btnAddCarHome"
        android:backgroundTint="@color/dark_blue"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCheckCar"
        android:layout_below="@id/btnAddCar"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:textSize="30sp"
        android:text="@string/btnCheckCar"
        android:backgroundTint="@color/dark_blue"/>

</RelativeLayout>